# my_budget_planner_with_snake

./: .gitignore  LICENSE  README.md  manage.py  pyproject.toml  render.yaml  requirements.txt
accounts/: forms.py  tests.py  urls.py  views.py
accounts/templates/: edit_profile.html  login.html  logout.html  password_reset.html  password_reset_done.html  password_reset_sent.html  register.html  user_profile.html
budgets/: admin.py  forms.py  models.py  urls.py  views.py
budgets/migrations/: 0001_initial.py
categories/: admin.py  forms.py  models.py  urls.py  views.py
categories/migrations/: 0001_initial.py
dashboard/: urls.py  views.py
my_budget_planner_with_snake/: asgi.py  settings.py  urls.py  wsgi.py
planner/: admin.py  apps.py  forms.py  models.py  signals.py  tests.py  urls.py  views.py
planner/migrations/: 0001_initial.py  0002_frequencies_transactions_execution_date_and_more.py  0003_repeatabletransactions_category_and_more.py  0004_transactions_repeatable_transaction.py  0005_budgets_and_more.py  0006_remove_transactions_is_repatable_and_more.py  0007_rename_budgets_budget_rename_categories_category_and_more.py  0008_alter_budget_options_alter_category_options_and_more.py  0009_alter_transaction_execution_date.py  0010_alter_transaction_repeatable_transaction.py  0011_budget_amount_currency_and_more.py  0012_alter_budget_amount_and_more.py  0013_category_default_usercategory_category_sers.py  0014_alter_usercategory_options_and_more.py  (+2 more)
templates/: base.html
transactions/: apps.py  forms.py  models.py  signals.py  urls.py  views.py
(+43 files in other folders)
