[tool.poetry]
name = "my_budget_planner_with_snake"
version = "0.1.0"
description = ""
authors = ["mluckiewicz <mateuszluckiewicz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
django = ">=3.2.0,<3.3.0"
django-grappelli = "2.15.6"
django-money = "^3.1.0"
django-widget-tweaks = "^1.4.12"
dj-database-url = "^1.3.0"
psycopg2-binary = "^2.9.6"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
